# clickhouse-task

./: .gitignore  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: tests.yml
etl/: seed.py  sync_src_dest.py  sync_table.py
migrations/: V1__create_schema.sql  clickhouse_schema.sql
sql/: click_through_rate.sql  daily_impressions_clicks.sql  hourly_impressions_clicks.sql  sample.sql
templates/: custom_query.html  index.html
tests/: test_connection.py  test_sync.py  test_utils.py
utils/: db_connections.py  sql_loader.py
